# learn-ros2-for-robocon

./: .gitignore  README.md  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
docs/: omni_dynamics.py
src/exr1_bringup/: CMakeLists.txt  package.xml
src/exr1_bringup/config/: config.rviz  exr1_sim_node.yaml
src/exr1_bringup/launch/: all_sim.launch.py  common.launch.py  field_description.launch.py  localization_sim.launch.py  minimal_sim.launch.py  sim.launch.py
src/exr1_bringup/urdf/: field.urdf.xacro
src/exr1_bringup/world/: world.sdf
src/exr1_description/: CMakeLists.txt  package.xml
src/exr1_description/launch/: robot_description.launch.py
src/exr1_description/urdf/: exr1.urdf.xacro  ld06_lidar.urdf.xacro  utils.xacro  wheel.urdf.xacro
src/exr1_gz_plugins/: CMakeLists.txt  package.xml
src/exr1_gz_plugins/hooks/: gz_sim_system_plugin_path.dsv
src/exr1_gz_plugins/src/: exr1_controller.hpp  exr1_node.hpp  exr1_sim_node.hpp  exr1_sim_system.cpp  pid_controller.hpp  quad_omni_drive_controller.hpp  tri_omni_drive_controller.hpp
src/exr1_sim/: CMakeLists.txt  package.xml
src/exr1_sim/config/: exr1_node.yaml
src/exr1_sim/launch/: simulation.launch.py  spawn.launch.py
src/exr1_sim/worlds/: world.sdf
src/laserscan_merger/: CMakeLists.txt  package.xml
src/laserscan_merger/include/laserscan_merger/: laserscan_merger.hpp
src/laserscan_merger/src/: laserscan_merger.cpp  laserscan_merger_node.cpp
src/ransac_localization/: CMakeLists.txt  package.xml
src/ransac_localization/src/: corner_localization.cpp  corner_localization.hpp  multi_scan_subscription.cpp  multi_scan_subscription.hpp  ransac_localization_node.cpp  ransac_localization_node.hpp  standalone.cpp
src/simple_pose_controller/: CMakeLists.txt  package.xml
src/simple_pose_controller/src/: simple_pose_controller.cpp  simple_pose_controller_node.cpp  simple_pose_controller_node.hpp  standalone.cpp
